# nautica

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/interface/: nn_interface.hpp  nn_interface_registry.cpp
src/neural_networks/architectures/cnn/: cnn.hpp  cnn_registry.cpp
src/neural_networks/architectures/cnn/kernels/: kernels.hpp  kernels_registry.cpp
src/neural_networks/enums/: nn_enums.hpp
src/neural_networks/tensors/: tensor.hpp  tensor_registry.cpp
src/neural_networks/utility/: nn_utility.hpp  nn_utility_registry.cpp
src/processing/images/: image_extractor.hpp  image_extractor_registry.cpp
src/stb/: stb_implementation.cpp
testing/: benchmark.cpp
